--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,6 +21,9 @@
         </li>
     <% else %>
         <li class="nav-item">
+        <%= link_to 'Homepage', current_user, class: 'nav-link'%>
+        </li>
+        <li class="nav-item">
         <%= link_to 'Sign Out', destroy_user_session_path, class: 'nav-link', :method => 'delete'%>
         </li>
         <li class="nav-item">
