--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -4,6 +4,7 @@
   <%= a.input :name, label: "Name" %>
   <%= a.input :description, label: "Description" %>
   <%= a.input :specs, label: "Specifications" %>
+  <%= a.input :price, label: "Price" %>
   <%= a.button :submit, class: "btn btn-primary" %>
   <%= link_to 'Natrag', products_path %>
 <% end %>
