--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,6 +8,7 @@
             <th>Product Code</th>
             <th>Description</th>
             <th>Specification</th>
+            <th>Price</th>
         </tr>
     </thead>
 
@@ -18,6 +19,14 @@
                 <td><%=  product.product_code %></td>
                 <td><%=  product.description %></td>
                 <td><%=  product.specs %></td>
+                <td>
+                    <%= form_for(@order_item) do |item| %>
+                        <%= item.hidden_field :product_id, value: product.id %>
+                        <%=  product.price %>
+                        <%= item.text_field :quantity, value: 1, min: 1, class: 'form-control' %>
+                        <%= item.submit "Add to cart", class: 'btn btn-primary btn-sm' %>
+                    <% end %>
+                </td>
                 <td><%= link_to 'Show', product %></td>
             </tr>
         <%end%>
