--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,6 +8,7 @@
             <th>Product Code</th>
             <th>Description</th>
             <th>Specification</th>
+            <th>Price</th>
         </tr>
     </thead>
 
@@ -17,6 +18,15 @@
                 <td><%=  @product.product_code %></td>
                 <td><%=  @product.description %></td>
                 <td><%=  @product.specs %></td>
+                <td>
+                    <%= form_for(@order_item) do |item| %>
+                        <%= item.hidden_field :product_id, value: @product.id %>
+                        <%=  @product.price %>
+                        <%= item.text_field :quantity, value: 1, min: 1, class: 'form-control' %>
+                        <%= item.submit "Add to cart", class: 'btn btn-primary btn-sm' %>
+                    <% end %>
+                </td>
+
                 <% if user_signed_in? %>
                   <%= link_to 'Edit', edit_product_path %>
                   <%= link_to 'Destroy', product_path, method: :delete, data: {confirm: "Are you sure?"} %>
