--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,9 +22,11 @@
                 <td>
                     <%= form_for(@order_item) do |item| %>
                         <%= item.hidden_field :product_id, value: product.id %>
-                        <%=  product.price %>
-                        <%= item.text_field :quantity, value: 1, min: 1, class: 'form-control' %>
-                        <%= item.submit "Add to cart", class: 'btn btn-primary btn-sm' %>
+                        <%=  product.price_cents %>
+                        <% if user_signed_in? %>
+                            <%= item.text_field :quantity, value: 1, min: 1, class: 'form-control' %>
+                            <%= item.submit "Add to cart", class: 'btn btn-primary btn-sm' %>
+                        <% end %>
                     <% end %>
                 </td>
                 <td><%= link_to 'Show', product %></td>
