--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,7 +21,7 @@
                 <td>
                     <%= form_for(@order_item) do |item| %>
                         <%= item.hidden_field :product_id, value: @product.id %>
-                        <%=  @product.price %>
+                        <%=  @product.price_cents %>
                         <%= item.text_field :quantity, value: 1, min: 1, class: 'form-control' %>
                         <%= item.submit "Add to cart", class: 'btn btn-primary btn-sm' %>
                     <% end %>
