--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -16,7 +16,7 @@
         <td>
             <%= form_for(item, remote: true, method: :patch) do |f| %>
                 <%= f.hidden_field :product_id, value: item.product.id %>
-                <%=  item.product.price_cents %>
+                <%=  item.product.price %>
                 <%= f.text_field :quantity, value: item.quantity.to_i, min: 1, class: 'form-control' %>
                 <%= f.submit "Update Quantity", class: 'btn btn-primary' %>
                 <%= link_to 'Delete', item, method: :delete, remote: true, class: 'btn btn-danger' %>
