changes to products controller and models

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -26,7 +26,7 @@
     </tr>
   <% end %>
   <br>
-    <%= link_to "Pay", root_path, class: 'btn btn-primary' %>
+    <%= link_to "Pay", checkout_path, class: 'btn btn-primary' %>
     
 
 <% else %>
