Front end styling

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,6 +9,7 @@
             <th>Description</th>
             <th>Specification</th>
             <th>Price</th>
+            <th>View Product</th>
         </tr>
     </thead>
 
