--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+table, th, td {
+    border: 1px solid black;
+}
+
+td {
+    text-align: left;
+}
+
+table {
+    width: 100%;
+}
+
+th, td {
+    padding: 10px;
+  }
+
+tr:hover {background-color: yellow;} 
+
+
+th {
+    background-color: #04AA6D;
+    color: black;
+  } 
