--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -26,7 +26,9 @@
     </tr>
   <% end %>
   <br>
+  <div class="pay-button">
     <%= link_to "Pay", orders_path(@order), class: 'btn btn-primary' %>
+  </div>
     
 
 <% else %>
