--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,14 +19,7 @@
                 <td><%=  @product.description %></td>
                 <td><%=  @product.specs %></td>
                 <td>
-                    <%= form_for(@order_item) do |item| %>
-                        <%= item.hidden_field :product_id, value: @product.id %>
-                        <%=  @product.price %>
-                        <% if user_signed_in? %>
-                            <%= item.text_field :quantity, value: 1, min: 1, class: 'form-control' %>
-                            <%= item.submit "Add to cart", class: 'btn btn-primary btn-sm' %>
-                        <% end %>
-                    <% end %>
+                    <%= render partial: "shared/add_to_cart_show" %>
                 </td>
             
             </tr>
