--- a/app/views/shared/_add_to_cart_show.html.erb
+++ b/app/views/shared/_add_to_cart_show.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@order_item) do |item| %>
     <%= item.hidden_field :product_id, value: @product.id %>
-    <%=  @product.price %>
+    <%=  @product.price_cents/100 %>
     <% if user_signed_in? %>
         <%= item.text_field :quantity, value: 1, min: 1, class: 'form-control' %>
         <%= item.submit "Add to cart", class: 'btn btn-primary btn-sm' %>
