--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
             <% current_user.orders.each do |o| %>
                 <td>Price: <%= o.subtotal %><br>
                 Address: <%= o.address %><br>
-                Currency: <%= o.currency %><br>
+                Currency: <%= o.products.first.currency %><br>
                 Zip Code: <%= o.zip_code %><br><br>
                 </td>
 
