Added credit card functionality and enabled transactions

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -27,7 +27,7 @@
   <% end %>
   <br>
   <div class="pay-button">
-    <%= link_to "Pay", orders_path(@order), class: 'btn btn-primary' %>
+    <%= link_to "Pay", orders_path, class: 'btn btn-primary' %>
   </div>
     
 
