--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,11 +1,6 @@
-<%= simple_form_for(@order) do |a| %>
+<%= simple_form_for(@order, method: :patch) do |a| %>
   <%= a.input :address, label: "Address" %>
-  <%= a.input :city, label: "City" %>
-  <%= a.input :zip_code, label: "Zip Code" %>
-  <%= a.input :phone, label: "Phone Number" %>
-  <%= a.input :comment, label: "Leave a comment" %>
-  <%= a.hidden_field :transaction_type, :value => "purchase" %>
-  <%= a.hidden_field :currency, :value => current_order.products.first.currency%>
-  <%= submit_tag "Order", :class => "btn pay_submit" %>
+  <%= a.input :country, as: :country %>
+  <%= a.button :submit, :class => "btn pay_submit" %>
 <% end %>
 
