--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -11,5 +11,7 @@
         <!-- Used to display Component errors. -->
         <div id="card-errors" role="alert"></div>
     </div>
-    <%= button_to 'Submit Payment', root_url, :class => 'btn btn-primary'%>
+    <%= button_to 'Submit Payment', 
+        root_url, 
+        :class => 'btn btn-primary'%>
 </form>
