--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,10 +16,9 @@
                 <td>Price: <%= o.subtotal %><br>
                 Address: <%= o.address %><br>
                 Currency: <%= o.products.first.currency %><br>
-                Zip Code: <%= o.zip_code %><br><br>
+                Zip Code: <%= o.zip_code %><br>
+                <%= link_to 'Order', order_path(o) %><br>
                 </td>
-
-
             <% end %>
         </tr>
     </tbody>
