Changed product price to cents and adjusted views and controllers to changes

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,7 +22,7 @@
                 <td>
                     <%= render partial: "shared/add_to_cart_show" %>
                 </td>
-                <td><%=  @product.currency %></td>
+                <td><%=  @product.price_currency %></td>
 
             </tr>
     </tbody>
