--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -8,6 +8,7 @@
 
 <% if @order_items.size > 0 %>
   <% @order_items.each do |item| %>
+    <% @sum = 0%>
     <tr>
         <td><%=  item.product.name %></td>
         <td><%=  item.product.product_code %></td>
@@ -16,14 +17,19 @@
         <td>
             <%= form_for(item, remote: true, method: :patch) do |f| %>
                 <%= f.hidden_field :product_id, value: item.product.id %>
-                <%=  item.product.price %>
+                <%=  (item.product.price_cents).to_f/100 %>
                 <%= f.text_field :quantity, value: item.quantity.to_i, min: 1, class: 'form-control' %>
                 <%= f.submit "Update Quantity", class: 'btn btn-primary' %>
                 <%= link_to 'Delete', item, method: :delete, remote: true, class: 'btn btn-danger' %>
-                <span>Total Price: <%= item.total_price %> </span>
             <% end %>
         </td>
     </tr>
+    <span>              <% @order_items.each do |total| %> 
+                          <% @sum += total.total_price%>
+                        <% end %>
+          Total Price:  <%= @sum %>
+    </span>
+
   <% end %>
   <br>
   <div class="pay-button">
