--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -16,7 +16,7 @@
             <tr>
                 <td><%=  product.name %></td>
                 <td><%=  product.description %></td>
-                <td><%=  product.price_cents/100 %></td>
+                <td><%=  (product.price_cents.to_f)/100 %></td>
                 <td><%=  product.currency %></td>
             </tr>
         <% end %>
