--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,14 +24,14 @@
                 <td>
                     <%= form_for(@order_item) do |item| %>
                         <%= item.hidden_field :product_id, value: product.id %>
-                        <%=  product.price_cents/100 %>
+                        <%=  (product.price_cents.to_f)/100 %>
                         <% if user_signed_in? %>
                             <%= item.text_field :quantity, value: 1, min: 1, class: 'form-control' %>
                             <%= item.submit "Add to cart", class: 'btn btn-primary btn-sm' %>
                         <% end %>
                     <% end %>
                 </td>
-                <td><%=  product.currency %></td>
+                <td><%=  product.price_currency %></td>
                 <td><%= link_to 'Show', product %></td>
             </tr>
         <%end%>
