Refactored order and order_items controllers. Moved current_order helper from ApplicationHelper to PaymentHelper

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -33,7 +33,7 @@
   <% end %>
   <br>
   <div class="pay-button">
-    <%= link_to "Pay", edit_order_path(current_order), class: 'btn btn-primary' %>
+    <%= link_to "Pay", new_order_path, class: 'btn btn-primary' %>
   </div>
     
 
