--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -6,8 +6,8 @@
   </ul>
 <% end %>
 
-<% if @order_items.size > 0 %>
-  <% @order_items.each do |item| %>
+<% if current_cart.order_items.size > 0 %>
+  <% current_cart.order_items.each do |item| %>
     <% @sum = 0%>
     <tr>
         <td><%=  item.product.name %></td>
@@ -17,6 +17,7 @@
         <td>
             <%= form_for(item, remote: true, method: :patch) do |f| %>
                 <%= f.hidden_field :product_id, value: item.product.id %>
+                <%= f.hidden_field :cart_id, value: item.cart.id %>
                 <%=  (item.product.price_cents).to_f/100 %>
                 <%= f.text_field :quantity, value: item.quantity.to_i, min: 1, class: 'form-control' %>
                 <%= f.submit "Update Quantity", class: 'btn btn-primary' %>
@@ -24,7 +25,7 @@
             <% end %>
         </td>
     </tr>
-    <span>              <% @order_items.each do |total| %> 
+    <span>              <% current_cart.order_items.each do |total| %> 
                           <% @sum += total.total_price%>
                         <% end %>
           Total Price:  <%= @sum %>
