Wrote integration tests for order_item, order and payment

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
             <% current_user.orders.each do |o| %>
                 <td>Price: <%= o.subtotal %><br>
                 Address: <%= o.address %><br>
-                Currency: <%= o.products.first.currency %><br>
+                Currency: <%= o.currency %><br>
                 Zip Code: <%= o.zip_code %><br>
                 <%= link_to 'Order', order_path(o) %><br>
                 </td>
