Added cart_sum on extra places

--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,4 +1,4 @@
-<% if !@order_item.nil? && @order_item.errors.any? %>
+<% if errors? %>
   <ul>
     <% @order_item.errors.full_messages.each do |msg| %>
         <li> <%= msg %> </li>
