--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -5,7 +5,7 @@
     <% end %>
   </ul>
 <% end %>
-
+debugger
 <% if current_cart.order_items.size > 0 %>
   <% current_cart.order_items.each do |item| %>
     <% @sum = 0%>
