Added Sidekiq and Redis gems for mail delivery.

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,9 @@
 <%= simple_form_for(@order) do |a| %>
   <%= a.input :address, label: "Address" %>
   <%= a.input :country, as: :country %>
+  <%= a.input :zip_code, label: "Zip Code" %>
+  <%= a.input :phone, label: "Phone number" %>
+
   <%= a.hidden_field :transaction_type, :value => "purchase" %>
   <%= a.button :submit, :class => "btn pay_submit" %>
 <% end %>
